# Zappy

./: .gitignore  Makefile  README.md
clients/: NetworkClient.js
clients/AI/: GameManager.js  Main.js  NetworkClient.js  PacketBuffer.js  ProcessManager.js  buildSea.sh  constant.js  package.json  seaConfig.json  smartBuild.sh
clients/AI/FSM/: Brain.js  ElevationState.js  FarmingState.js  HomingState.js  IState.js  InitState.js  SurvivalState.js
clients/AI/communication/: CommandManager.js  NetworkClient.js  PacketBuffer.js  ResponseParser.js
clients/gfx/: .gitignore  bigTest  forge.config.js  package.json  playerStackTest  test
clients/gfx/scripts/: buildGFX.sh  cleanGFX.sh  fcleanGFX.sh  runDevGFX.sh  runGFX.sh  smartBuildGFX.sh
clients/gfx/src/: Main.js  electron.js  index.html  main.js  script.js  style.css
clients/gfx/src/Interfaces/js/: EventManager.js
clients/gfx/src/Socketing/: MessageHandler.js  NetworkClient.js  PacketBuffer.js
clients/gfx/src/World/: Camera.js  GameState.js  MusicManager.js  Renderer.js  ThemeManager.js  UpdateManager.js  World.js  script.js  sources.js  threeUtils.js
clients/gfx/src/World/Map/: GameMap.js  Players.js  ResourceAssets.js  constants.js
clients/gfx/src/World/Utils/: Resources.js  Time.js
clients/gfx/static/fonts/: PoppinsSemiBold.json
server/: .gitignore  Cargo.toml  TODO
server.d/src/: main.rs  server.rs
server.d/src/server/: command_manager.rs  game.rs
server/src/: main.rs  server.rs
server/src/server/: client.rs  command_manager.rs  define.rs  game.rs  graphic.rs  map.rs  utils.rs
(+5 files in other folders)
